Fixed overflow issues

--- a/styles/_portfolio.scss
+++ b/styles/_portfolio.scss
@@ -1,5 +1,5 @@
 #portfolio {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   background-color: #fff;
   position: relative;
